[WIP] fixing spacing issues! (#6548)
* added 'columns' class to edu breadcrumbs

* added columns class to a variety of pages to fix breadcrumbs spacing

* removed left padding inheritance on help box to resolve wonky left alignmnet

* modified this site is a WIP left-alignment

* adjusted max width of va-banner--inner to fix right alignment

* Footer alignments

--- a/src/sass/base/_va.scss
+++ b/src/sass/base/_va.scss
@@ -781,7 +781,7 @@ li {
 }
 
 [class^=va-wip] {
-  padding: .576rem 1.08rem;
+  padding: .576rem 0;
   font-size: 0.8em;
   font-weight: 400;
 
@@ -829,7 +829,7 @@ li {
 
   &-inner {
     margin: auto;
-    max-width: 97rem;
+    max-width: 97.5rem;
     position: relative;
   }
 
@@ -866,7 +866,7 @@ li {
 
   @include media($medium-large-screen) {
     .usa-grid {
-      padding-left: 2rem;
+      padding-left: 0.9375rem;
       padding-right: 2rem;
     }
   }
@@ -1146,6 +1146,7 @@ li {
 // Disclaimer
 .disclaimer {
   padding: 1em 0;
+  padding-left: 0.9375rem;
 
   p {
     font-size: 1.28rem;
